--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -1,7 +1,8 @@
 <header class="header">
   <nav class="navbar">
     <div class="navbar-brand">
-      <a class="navbar-item" href="{{{or site.url (or siteRootUrl siteRootPath)}}}">{{site.title}}</a>
+      <a class="navbar-item logo" title="Stackolater" href="https://stackolater.com"><img src="{{{uiRootPath}}}/img/stackolater-logo.svg" alt="Stackolater" width="48"></a>
+      <a class="navbar-item title" href="{{{or site.url (or siteRootUrl siteRootPath)}}}">{{site.title}}</a>
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
         <span></span>
