Logout button, logo in footer

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -19,6 +19,7 @@
             <a class="navbar-item" href="#">sol tools</a>
           </div>
         </div>
+        <a class="navbar-item" href="stackolater.eu.auth0.com/v2/logout?client_id=aHTFNMn9ON9kWKbRPhiZXR2KkO1ifErX&returnTo={{{site.url}}}">Logout</a>
       </div>
     </div>
   </nav>
